Regression in BVH building/Synchronize #50655

Closed
opened 2017-02-11 22:51:18 +01:00 by jens verwiebe · 8 comments
Member

System Information
Linux Mint 17.3, NV Driver 375.26, 64bit

Blender Version
Broken: 5552e83b53, possibly earlier
Worked: 2.78b release

Short description of error
Building bvh tree/sychronizing takes forever ( killed after 7 min, perhaps never finished, typically should be < 2minutes here )

Exact steps for others to reproduce the error
Get Victor bench, try render. ( cpu or gpu does not matter )

screenshot-area-2017-02-11-223957.png

Jens

**System Information** Linux Mint 17.3, NV Driver 375.26, 64bit **Blender Version** Broken: 5552e83b5338, possibly earlier Worked: 2.78b release **Short description of error** Building bvh tree/sychronizing takes forever ( killed after 7 min, perhaps never finished, typically should be < 2minutes here ) **Exact steps for others to reproduce the error** Get Victor bench, try render. ( cpu or gpu does not matter ) ![screenshot-area-2017-02-11-223957.png](https://archive.blender.org/developer/F483561/screenshot-area-2017-02-11-223957.png) Jens
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jensverwiebe

Added subscriber: @jensverwiebe
Sergey Sharybin self-assigned this 2017-02-11 22:52:06 +01:00
Author
Member

To be more precise:
I disabled renderability of multires/subsurf for some "critical"
objects ( GEO_tree_sculpt and GEO_rocked_detailed ) and the sychronize is way faster an i came to render again.
Also: Exactly whats stallling is only the "synchronize" part.

Jens

To be more precise: I disabled renderability of multires/subsurf for some "critical" objects ( GEO_tree_sculpt and GEO_rocked_detailed ) and the sychronize is way faster an i came to render again. Also: Exactly whats stallling is only the "synchronize" part. Jens
Author
Member

Did some more investigation and extracted a simplified testcase from victor. It consist only one tree + material. The hang goes away if you either disable multires or cut both pointiness routes !

T50655_simplified.blend.tar.bz2

Jens

Did some more investigation and extracted a simplified testcase from victor. It consist only one tree + material. The hang goes away if you either disable multires or cut both pointiness routes ! [T50655_simplified.blend.tar.bz2](https://archive.blender.org/developer/F483592/T50655_simplified.blend.tar.bz2) Jens
Author
Member

Okay, the bell rang loud here so i checkout one commit before "fd7e9f7 Cycles: Fix pointiness attribute giving wrong results with autosplit" and this worked again. So the culprit is found and the task attached to the right person :P

Broken: commit fd7e9f7

Jens

Okay, the bell rang loud here so i checkout one commit before "fd7e9f7 Cycles: Fix pointiness attribute giving wrong results with autosplit" and this worked again. So the culprit is found and the task attached to the right person :P Broken: commit fd7e9f7 Jens

This issue was referenced by blender/cycles@137079fe92

This issue was referenced by blender/cycles@137079fe923c75b2e62f2e6eb8069471eb1452f1

This issue was referenced by 37afa965a4

This issue was referenced by 37afa965a4a1cb8053d449f72cb533a441279af2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50655
No description provided.